WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
197158
Using CSS wide keywords as a fallback for variable substitution works inconsistently.
https://bugs.webkit.org/show_bug.cgi?id=197158
Summary
Using CSS wide keywords as a fallback for variable substitution works inconsi...
Emilio Cobos Álvarez (:emilio)
Reported
2019-04-22 08:36:48 PDT
Created
attachment 367940
[details]
Testcase. STR: Open the attached test-case. Expected result: A 10px border of the initial color. Actual result: The border is transparent, but if I change `color: var(--unknown, initial)` by just `initial`, then it works. So `var(--unknown, inherit)` works but `var(--unknown, initial)` doesn't. I don't see why they should be different. Chromium has the same bug:
https://bugs.chromium.org/p/chromium/issues/detail?id=954963
Attachments
Testcase.
(754 bytes, text/html)
2019-04-22 08:36 PDT
,
Emilio Cobos Álvarez (:emilio)
no flags
Details
Patch
(10.48 KB, patch)
2020-10-05 13:59 PDT
,
Tyler Wilcock
no flags
Details
Formatted Diff
Diff
Patch
(10.19 KB, patch)
2020-10-06 12:26 PDT
,
Tyler Wilcock
no flags
Details
Formatted Diff
Diff
Patch
(10.14 KB, patch)
2020-10-06 18:54 PDT
,
Tyler Wilcock
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Emilio Cobos Álvarez (:emilio)
Comment 1
2019-04-22 08:37:31 PDT
I'm fixing Firefox (which doesn't support wide keywords altogether) in
https://bugzilla.mozilla.org/show_bug.cgi?id=1544886
Tyler Wilcock
Comment 2
2020-10-05 13:59:45 PDT
Created
attachment 410552
[details]
Patch
Tyler Wilcock
Comment 3
2020-10-06 12:26:50 PDT
Created
attachment 410678
[details]
Patch
Sam Weinig
Comment 4
2020-10-06 17:46:57 PDT
Comment on
attachment 410678
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=410678&action=review
> Source/WebCore/css/parser/CSSPropertyParser.cpp:296 > + if (value)
Can value ever be null here?
Darin Adler
Comment 5
2020-10-06 18:45:03 PDT
Comment on
attachment 410678
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=410678&action=review
>> Source/WebCore/css/parser/CSSPropertyParser.cpp:296 >> + if (value) > > Can value ever be null here?
It can’t and this if statement can be removed.
> Source/WebCore/css/parser/CSSPropertyParser.cpp:304 > + if (RefPtr<CSSValue> value = maybeConsumeCSSWideKeyword(parser.m_range))
auto
> Source/WebCore/css/parser/CSSPropertyParser.cpp:369 > + RefPtr<CSSValue> value = maybeConsumeCSSWideKeyword(rangeCopy);
auto
Tyler Wilcock
Comment 6
2020-10-06 18:54:26 PDT
Created
attachment 410724
[details]
Patch
EWS
Comment 7
2020-10-07 15:41:30 PDT
Committed
r268157
: <
https://trac.webkit.org/changeset/268157
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 410724
[details]
.
Radar WebKit Bug Importer
Comment 8
2020-10-07 15:42:18 PDT
<
rdar://problem/70068414
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug