Using CSS wide keywords as a fallback for variable substitution works inconsistently. https://bugs.webkit.org/show_bug.cgi?id=197158

Patch by Tyler Wilcock <twilco.o@protonmail.com> on 2020-10-07
Reviewed by Darin Adler.

Source/WebCore:

Enable CSS-wide keywords to be used as variable fallbacks.

See spec-issue for further discussion:
https://github.com/w3c/csswg-drafts/issues/5325

Patch inspired by Chromium's implementation:
https://bugs.chromium.org/p/chromium/issues/detail?id=954963#c5

Tests: fast/css/variables/css-wide-keywords-in-fallback-inherited-property.html
       fast/css/variables/css-wide-keywords-in-fallback-non-inherited-property.html

* css/parser/CSSPropertyParser.cpp: Add `maybeConsumeCSSWideKeyword`
function.
(WebCore::CSSPropertyParser::parseSingleValue): Before trying to parse
the property-specific values for the input `property`, first try parsing the
CSS-wide keywords via `maybeConsumeCSSWideKeyword`.
(WebCore::CSSPropertyParser::consumeCSSWideKeyword): Refactor to use
`maybeConsumeCSSWideKeyword`.

LayoutTests:

Add tests ensuring CSS-wide keywords are functional as variable
fallbacks.

* fast/css/variables/css-wide-keywords-in-fallback-inherited-property-expected.html: Added.
* fast/css/variables/css-wide-keywords-in-fallback-inherited-property.html: Added.
* fast/css/variables/css-wide-keywords-in-fallback-non-inherited-property-expected.html: Added.
* fast/css/variables/css-wide-keywords-in-fallback-non-inherited-property.html: Added.

Canonical link: https://commits.webkit.org/230221@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@268157 268f45cc-cd09-0410-ab3c-d52691b4dbfc